--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.10",
     "@tabler/icons-react": "^3.34.1",
@@ -20,6 +21,7 @@
     "@tiptap/static-renderer": "^3.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.0",
