Added DragHandle and LinkOption

--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@tabler/icons-react": "^3.34.1",
     "@tiptap/extension-code-block-lowlight": "^3.3.0",
+    "@tiptap/extension-collaboration": "^3.4.1",
+    "@tiptap/extension-drag-handle": "^3.4.1",
+    "@tiptap/extension-drag-handle-react": "^3.4.1",
+    "@tiptap/extension-node-range": "^3.4.1",
     "@tiptap/pm": "^3.3.0",
     "@tiptap/react": "^3.3.0",
     "@tiptap/starter-kit": "^3.3.0",
     "@tiptap/static-renderer": "^3.3.0",
+    "@tiptap/y-tiptap": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -31,7 +36,9 @@
     "react-dom": "19.1.0",
     "react-syntax-highlighter": "^15.6.6",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "y-protocols": "^1.0.6",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
