--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/extension-drag-handle": "^3.4.1",
     "@tiptap/extension-drag-handle-react": "^3.4.1",
     "@tiptap/extension-node-range": "^3.4.1",
+    "@tiptap/extension-text-align": "^3.4.1",
     "@tiptap/pm": "^3.3.0",
     "@tiptap/react": "^3.3.0",
     "@tiptap/starter-kit": "^3.3.0",
