--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-syntax-highlighter": "^15.6.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tiptap-extension-resize-image": "^1.3.1",
     "y-protocols": "^1.0.6",
     "yjs": "^13.6.27"
   },
